--- a/es/privacy/index.html
+++ b/es/privacy/index.html
@@ -1,16 +1,230 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Política de privacidad — Presidency Clock</title><link rel="canonical" href="https://presidencyclock.com/es/privacy/">
-<meta name="description" content="Cookies, publicidad de Google AdSense, datos y contacto.">
-<style>body{margin:0;background:#f6f8fd;color:#0c1220;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}.wrap{max-width:900px;margin:28px auto;padding:0 14px}.brand{position:fixed;left:12px;top:10px}.topnav{display:flex;gap:.6rem;justify-content:center;flex-wrap:wrap;margin:42px auto 14px}.topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid rgba(13,17,23,.12);background:#fff;padding:.4rem .7rem;border-radius:999px}h2{margin:18px 0 8px}</style>
-</head><body><div class="brand"><a href="/es/">← Inicio</a></div>
-<nav class="topnav" aria-label="Menú principal">
-  <a href="/es/">Inicio</a><a href="/es/about/">Acerca del sitio</a><a href="/es/presidents/">Presidentes</a>
-  <a href="/es/digest/">Resúmenes</a><a href="/es/privacy/">Privacidad</a><a href="/es/contact/">Contacto</a>
-</nav>
-<main class="wrap"><h1>Política de privacidad</h1>
-<p>Esta política explica cómo <strong>Presidency Clock</strong> trata los datos de los visitantes.</p>
-<h2>Cookies</h2><p>Podemos usar cookies técnicas para el correcto funcionamiento.</p>
-<h2>Publicidad (Google AdSense)</h2><p>Los anuncios pueden ser servidos por Google y otros proveedores. Gestiona la personalización en tu cuenta de Google o mediante el banner de consentimiento (EEE/RU).</p>
-<h2>Analítica</h2><p>No recopilamos datos personales salvo lo que puedan recopilar los anuncios de terceros.</p>
-<h2>Contacto</h2><p><a href="mailto:presidencyclock@gmail.com">presidencyclock@gmail.com</a></p>
-</main></body></html>
+<!doctype html>
+<html lang="es" data-theme="auto">
+<head>
+  <meta charset="utf-8">
+
+  <!-- THEME PACK -->
+  <script>
+  (function(){
+    try{
+      var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
+      var darkOS=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme=pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme=(theme==='dark'?'dark':'light');
+      if(pref==='auto' && window.matchMedia){
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e){
+          var t=e.matches?'dark':'light';
+          document.documentElement.setAttribute('data-theme', t);
+          document.documentElement.style.colorScheme=(t==='dark'?'dark':'light');
+          try{ if(window.updateFavicon) updateFavicon(); }catch(_){}
+        });
+      }
+    }catch(e){}
+  })();
+  </script>
+
+  <style>
+  :root{
+    --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+    --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+    --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
+  }
+  [data-theme="dark"]{
+    --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+    --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+  }
+
+  html,body{height:100%}
+  body{
+    margin:0; background:var(--bg); color:var(--text);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    background-image:
+      radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
+      radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
+      repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
+    background-attachment:fixed,fixed,fixed;
+  }
+  .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 32px}
+  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+
+  /* Cabecera + selector de tema */
+  .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
+  .brand{display:flex;align-items:center;gap:.5rem}
+  .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line)}
+  .brand__logo svg{width:20px;height:20px;color:var(--text)}
+  .brand__title{font-weight:800}
+
+  .theme{position:relative}
+  .theme__btn{
+    display:inline-flex;align-items:center;gap:.35rem;
+    background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
+    padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
+  }
+  .theme__menu{
+    position:absolute; right:0; top:40px; min-width:180px; background:var(--surface);
+    border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
+    display:none; padding:6px; z-index:20;
+  }
+  .theme__menu.open{display:block}
+  .theme__opt{display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none}
+  .theme__opt:hover{background:var(--tile-bg)}
+  .badge{font-size:12px;opacity:.75}
+
+  /* Contenido */
+  h1{font-weight:800;margin:8px 0 6px}
+  .card{background:var(--surface);border:1px solid var(--line);border-radius:18px;padding:14px;margin:10px 0}
+  .muted{opacity:.85}
+  .ad{display:flex;justify-content:center;align-items:center;margin:12px 0}
+  ul{padding-left:18px}
+  </style>
+
+  <!-- Favicon -->
+  <link id="favicon" rel="icon" type="image/svg+xml" href="">
+  <script>
+    function updateFavicon(){
+      try{
+        var c=getComputedStyle(document.documentElement).getPropertyValue('--text').trim()||'#0c1220';
+        var svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+c+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
+        var url='data:image/svg+xml,'+encodeURIComponent(svg);
+        var link=document.getElementById('favicon'); if(link) link.href=url;
+      }catch(e){}
+    }
+    (function(){ updateFavicon(); })();
+  </script>
+
+  <!-- Meta -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Privacidad — Presidency Clock</title>
+  <meta name="description" content="Información sobre privacidad, cookies (AdSense) y formas de contacto.">
+  <link rel="canonical" href="https://presidencyclock.com/es/privacy/">
+  <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+  <meta name="theme-color" content="#f6f8fd">
+</head>
+<body>
+  <div class="wrap">
+    <!-- Cabecera -->
+    <div class="topbar">
+      <div class="brand">
+        <a class="brand__logo" href="/es/" aria-label="Presidency Clock">
+          <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d='M16 8v8l6 4'></path></g></svg>
+        </a>
+        <div class="brand__title">Presidency&nbsp;Clock</div>
+      </div>
+
+      <div class="theme" id="themeBox">
+        <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
+          <span id="themeLabel">Tema: auto</span>
+        </button>
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Cambiar tema">
+          <div class="theme__opt" data-value="auto"  role="menuitem">Automático <span class="badge">según el sistema</span></div>
+          <div class="theme__opt" data-value="light" role="menuitem">Clara</div>
+          <div class="theme__opt" data-value="dark"  role="menuitem">Oscura</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Navegación -->
+    <nav class="card" aria-label="Navegación">
+      <a href="/es/">Inicio</a> •
+      <a href="/es/presidents/">Presidentes</a> •
+      <a href="/es/digest/">Resúmenes</a> •
+      <a href="/es/about/">Acerca del sitio</a> •
+      <a href="/es/contact/">Contacto</a>
+    </nav>
+
+    <h1>Privacidad</h1>
+
+    <div class="ad ad--top">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+
+    <section class="card">
+      <h2>1. Responsable</h2>
+      <p>Presidency Clock — Contacto: <a href="/es/contact/">página de contacto</a>.</p>
+    </section>
+
+    <section class="card">
+      <h2>2. Qué datos tratamos</h2>
+      <ul>
+        <li><b>Registros del servidor:</b> IP, marca temporal, user-agent (para seguridad y depuración).</li>
+        <li><b>Publicidad:</b> Usamos Google AdSense. Google puede usar cookies/tecnologías similares para personalizar o medir anuncios.</li>
+        <li><b>Enlaces externos:</b> Al abrir fuentes externas, aplican sus propias políticas.</li>
+        <li><b>Contacto:</b> Si nos escribes por correo, tratamos tus datos para responder.</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>3. Cookies y AdSense</h2>
+      <p>AdSense se carga del lado del cliente. Más información y opciones en la <a href="https://policies.google.com/technologies/ads" rel="nofollow noopener" target="_blank">Política de publicidad de Google</a>.</p>
+    </section>
+
+    <section class="card">
+      <h2>4. Tus derechos</h2>
+      <p>Según tu jurisdicción, puedes tener derecho de acceso, rectificación, eliminación y oposición. Escríbenos desde la <a href="/es/contact/">página de contacto</a>.</p>
+    </section>
+
+    <section class="card">
+      <h2>5. Contacto</h2>
+      <p>¿Dudas sobre privacidad? <a href="/es/contact/">Contacto</a>.</p>
+    </section>
+
+    <div class="ad ad--bottom">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="5432245255" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+  </div>
+
+  <!-- Lógica del selector de tema -->
+  <script>
+  (function(){
+    var btn  = document.getElementById('themeBtn');
+    var menu = document.getElementById('themeMenu');
+    var lab  = document.getElementById('themeLabel');
+
+    function currentPref(){ return (localStorage.getItem('theme')||'auto').toLowerCase(); }
+    function labelFrom(pref){ return pref==='auto' ? 'auto' : (pref==='light'?'clara':'oscura'); }
+
+    function applyTheme(pref){
+      localStorage.setItem('theme', pref);
+      var darkOS = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme  = pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+      lab.textContent = 'Tema: ' + labelFrom(pref);
+      try{ updateFavicon(); }catch(_){}
+    }
+    function toggleMenu(open){
+      var willOpen = (open!==undefined ? open : !menu.classList.contains('open'));
+      menu.classList.toggle('open', willOpen);
+      btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
+    }
+    lab.textContent = 'Tema: ' + labelFrom(currentPref());
+    applyTheme(currentPref());
+    btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
+    menu.querySelectorAll('.theme__opt').forEach(function(opt){
+      opt.addEventListener('click', function(){ applyTheme(this.getAttribute('data-value')); toggleMenu(false); });
+    });
+    document.addEventListener('click', function(e){
+      if(!menu.contains(e.target) && !btn.contains(e.target)) toggleMenu(false);
+    });
+    document.addEventListener('keydown', function(e){ if(e.key==='Escape') toggleMenu(false); });
+    window.__setTheme = applyTheme;
+  })();
+  </script>
+
+  <!-- AdSense loader -->
+  <script>
+    (function(){
+      const s=document.createElement('script'); s.async=true;
+      s.src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725';
+      s.crossOrigin='anonymous';
+      s.onload=function(){ try{ const arr=(window.adsbygoogle=window.adsbygoogle||[]); document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({})); }catch(e){} };
+      document.head.appendChild(s);
+    })();
+  </script>
+</body>
+</html>
