--- a/fr/contact/index.html
+++ b/fr/contact/index.html
@@ -1,10 +1,281 @@
-<!doctype html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact — Presidency Clock</title><link rel="canonical" href="https://presidencyclock.com/fr/contact/">
-<style>body{margin:0;background:#f6f8fd;color:#0c1220;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}.wrap{max-width:900px;margin:28px auto;padding:0 14px}.brand{position:fixed;left:12px;top:10px}.topnav{display:flex;gap:.6rem;justify-content:center;flex-wrap:wrap;margin:42px auto 14px}.topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid rgba(13,17,23,.12);background:#fff;padding:.4rem .7rem;border-radius:999px}</style>
-</head><body><div class="brand"><a href="/fr/">← Accueil</a></div>
-<nav class="topnav" aria-label="Menu principal">
-  <a href="/fr/">Accueil</a><a href="/fr/about/">À propos</a><a href="/fr/presidents/">Présidents</a>
-  <a href="/fr/digest/">Résumés</a><a href="/fr/privacy/">Confidentialité</a><a href="/fr/contact/">Contact</a>
-</nav>
-<main class="wrap"><h1>Contact</h1><p>Email : <a href="mailto:presidencyclock@gmail.com">presidencyclock@gmail.com</a></p></main>
-</body></html>
+<!doctype html>
+<html lang="fr" data-theme="auto">
+<head>
+  <meta charset="utf-8">
+
+  <!-- THEME PACK -->
+  <script>
+  (function(){
+    try{
+      var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
+      var darkOS=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme=pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme=(theme==='dark'?'dark':'light');
+      if(pref==='auto' && window.matchMedia){
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e){
+          var t=e.matches?'dark':'light';
+          document.documentElement.setAttribute('data-theme', t);
+          document.documentElement.style.colorScheme=(t==='dark'?'dark':'light');
+          try{ if(window.updateFavicon) updateFavicon(); }catch(_){}
+        });
+      }
+    }catch(e){}
+  })();
+  </script>
+
+  <style>
+  :root{
+    --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+    --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+    --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
+  }
+  [data-theme="dark"]{
+    --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+    --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+    --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa;
+  }
+
+  html,body{height:100%}
+  body{
+    margin:0; background:var(--bg); color:var(--text);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    background-image:
+      radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
+      radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
+      repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
+    background-attachment:fixed,fixed,fixed;
+  }
+  .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 32px}
+  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+
+  /* En-tête + sélecteur de thème */
+  .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
+  .brand{display:flex;align-items:center;gap:.5rem}
+  .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line)}
+  .brand__logo svg{width:20px;height:20px;color:var(--text)}
+  .brand__title{font-weight:800}
+
+  .theme{position:relative}
+  .theme__btn{
+    display:inline-flex;align-items:center;gap:.35rem;
+    background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
+    padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
+  }
+  .theme__menu{
+    position:absolute; right:0; top:40px; min-width:170px; background:var(--surface);
+    border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
+    display:none; padding:6px; z-index:20;
+  }
+  .theme__menu.open{display:block}
+  .theme__opt{display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none}
+  .theme__opt:hover{background:var(--tile-bg)}
+  .badge{font-size:12px;opacity:.75}
+
+  /* Contenu */
+  h1{font-weight:800;margin:8px 0 6px}
+  .card{background:var(--surface);border:1px solid var(--line);border-radius:18px;padding:14px;margin:10px 0}
+  .row{display:grid;grid-template-columns:1fr;gap:12px}
+  .label{font-weight:700;margin-bottom:6px}
+  .muted{opacity:.8}
+  .btn{
+    display:inline-flex;align-items:center;gap:.4rem;cursor:pointer;
+    background:var(--btn-bg);border:1px solid var(--line);border-radius:10px;
+    padding:8px 12px;font-weight:700;color:var(--text);text-decoration:none;
+  }
+  .btn:hover{background:var(--tile-bg)}
+  .ad{display:flex;justify-content:center;align-items:center;margin:12px 0}
+  input,textarea{
+    width:100%;padding:10px;border:1px solid var(--line);border-radius:10px;background:var(--surface);color:var(--text);
+    font:inherit;
+  }
+  textarea{min-height:120px;resize:vertical}
+  form .actions{display:flex;gap:10px;flex-wrap:wrap}
+  </style>
+
+  <!-- Favicon -->
+  <link id="favicon" rel="icon" type="image/svg+xml" href="">
+  <script>
+    function updateFavicon(){
+      try{
+        var c=getComputedStyle(document.documentElement).getPropertyValue('--text').trim()||'#0c1220';
+        var svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+c+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
+        var url='data:image/svg+xml,'+encodeURIComponent(svg);
+        var link=document.getElementById('favicon'); if(link) link.href=url;
+      }catch(e){}
+    }
+    (function(){ updateFavicon(); })();
+  </script>
+
+  <!-- Meta -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Contact — Presidency Clock</title>
+  <meta name="description" content="Contactez l’équipe de Presidency Clock : e-mail, message rapide, retours.">
+  <link rel="canonical" href="https://presidencyclock.com/fr/contact/">
+  <meta name="google-adsense-account" content="ca-pub-5023415479696725">
+  <meta name="theme-color" content="#f6f8fd">
+</head>
+<body>
+  <div class="wrap">
+    <!-- En-tête -->
+    <div class="topbar">
+      <div class="brand">
+        <a class="brand__logo" href="/fr/" aria-label="Presidency Clock">
+          <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
+        </a>
+        <div class="brand__title">Presidency&nbsp;Clock</div>
+      </div>
+
+      <div class="theme" id="themeBox">
+        <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
+          <span id="themeLabel">Thème : auto</span>
+        </button>
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Changer de thème">
+          <div class="theme__opt" data-value="auto"  role="menuitem">Auto <span class="badge">selon le système</span></div>
+          <div class="theme__opt" data-value="light" role="menuitem">Clair</div>
+          <div class="theme__opt" data-value="dark"  role="menuitem">Sombre</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Navigation -->
+    <nav class="card" aria-label="Navigation">
+      <a href="/fr/">Accueil</a> •
+      <a href="/fr/presidents/">Présidents</a> •
+      <a href="/fr/digest/">Synthèses</a> •
+      <a href="/fr/about/">À propos</a> •
+      <a href="/fr/privacy/">Confidentialité</a>
+    </nav>
+
+    <h1>Contact</h1>
+    <p class="muted">Envoyez-nous une idée, une question ou signalez un bug.</p>
+
+    <div class="ad ad--top">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+
+    <!-- Carte de contact -->
+    <section class="card">
+      <div class="label">Adresse e-mail</div>
+      <!-- Anti-spam : construire l’adresse par morceaux -->
+      <p>
+        <a id="mail" href="#" data-user="hello" data-domain="presidencyclock.com" data-subject="Question à propos du site">cliquer pour écrire</a>
+        <button class="btn" id="copyEmail" type="button" aria-label="Copier l’e-mail">Copier l’e-mail</button>
+      </p>
+      <p class="muted">Indiquez brièvement le motif dans l’objet (p. ex. « Proposition publicitaire »).</p>
+    </section>
+
+    <!-- Message rapide (mailto) -->
+    <section class="card">
+      <div class="label">Message rapide</div>
+      <form id="mailtoForm">
+        <div class="row">
+          <div>
+            <label for="subj" class="label">Objet</label>
+            <input id="subj" name="subject" placeholder="Objet du message" required>
+          </div>
+          <div>
+            <label for="msg" class="label">Message</label>
+            <textarea id="msg" name="message" placeholder="Votre message…" required></textarea>
+          </div>
+        </div>
+        <div class="actions" style="margin-top:10px">
+          <button class="btn" type="submit">Ouvrir dans le courriel</button>
+          <button class="btn" type="reset">Effacer</button>
+        </div>
+        <p class="muted" style="margin-top:8px">Le formulaire ouvre votre client mail avec l’adresse, l’objet et le texte pré-remplis.</p>
+      </form>
+    </section>
+
+    <div class="ad ad--bottom">
+      <ins class="adsbygoogle" style="display:block;min-height:90px"
+           data-ad-client="ca-pub-5023415479696725"
+           data-ad-slot="5432245255" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    </div>
+  </div>
+
+  <!-- Logique du thème -->
+  <script>
+  (function(){
+    var btn  = document.getElementById('themeBtn');
+    var menu = document.getElementById('themeMenu');
+    var lab  = document.getElementById('themeLabel');
+
+    function currentPref(){ return (localStorage.getItem('theme')||'auto').toLowerCase(); }
+    function labelFrom(pref){ return pref==='auto' ? 'auto' : (pref==='light'?'clair':'sombre'); }
+
+    function applyTheme(pref){
+      localStorage.setItem('theme', pref);
+      var darkOS = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme  = pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+      lab.textContent = 'Thème : ' + labelFrom(pref);
+      try{ updateFavicon(); }catch(_){}
+    }
+    function toggleMenu(open){
+      var willOpen = (open!==undefined ? open : !menu.classList.contains('open'));
+      menu.classList.toggle('open', willOpen);
+      btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
+    }
+    lab.textContent = 'Thème : ' + labelFrom(currentPref());
+    applyTheme(currentPref());
+    btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
+    menu.querySelectorAll('.theme__opt').forEach(function(opt){
+      opt.addEventListener('click', function(){ applyTheme(this.getAttribute('data-value')); toggleMenu(false); });
+    });
+    document.addEventListener('click', function(e){
+      if(!menu.contains(e.target) && !btn.contains(e.target)) toggleMenu(false);
+    });
+    document.addEventListener('keydown', function(e){ if(e.key==='Escape') toggleMenu(false); });
+    window.__setTheme = applyTheme;
+  })();
+  </script>
+
+  <!-- Construire l’e-mail, copier & mailto -->
+  <script>
+  (function(){
+    var a = document.getElementById('mail');
+    var u = a.getAttribute('data-user');
+    var d = a.getAttribute('data-domain');
+    var s = a.getAttribute('data-subject') || '';
+    var email = u + '@' + d;
+    a.textContent = email;
+    a.href = 'mailto:' + email + (s ? ('?subject=' + encodeURIComponent(s)) : '');
+
+    var copyBtn = document.getElementById('copyEmail');
+    copyBtn.addEventListener('click', function(){
+      try{
+        navigator.clipboard.writeText(email).then(function(){
+          var old = copyBtn.textContent;
+          copyBtn.textContent = 'Copié !';
+          setTimeout(function(){ copyBtn.textContent = old; }, 1200);
+        });
+      }catch(e){}
+    });
+
+    var form = document.getElementById('mailtoForm');
+    form.addEventListener('submit', function(e){
+      e.preventDefault();
+      var subj = document.getElementById('subj').value.trim();
+      var msg  = document.getElementById('msg').value.trim();
+      var link = 'mailto:' + email + '?subject=' + encodeURIComponent(subj) + '&body=' + encodeURIComponent(msg);
+      window.location.href = link;
+    });
+  })();
+  </script>
+
+  <!-- AdSense loader -->
+  <script>
+    (function(){
+      const s=document.createElement('script'); s.async=true;
+      s.src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725';
+      s.crossOrigin='anonymous';
+      s.onload=function(){ try{ const arr=(window.adsbygoogle=window.adsbygoogle||[]); document.querySelectorAll('ins.adsbygoogle').forEach(()=>arr.push({})); }catch(e){} };
+      document.head.appendChild(s);
+    })();
+  </script>
+</body>
+</html>
